mejorando el examen

--- a/views/index.html
+++ b/views/index.html
@@ -16,16 +16,19 @@
                 <div class="col">
                     <label for="nombreInput" class="form-label">Nombre del cliente</label>
                     <input type="text" class="form-control" id="nombreInput">
+                    <div  id="errorName" class="invalid-feedback">Rellena bien los campos con un mínimo de 3 caracteres. Asegúrate de ingresar letras en el campo "nombre"</div>
                 </div>
 
                 <div class="col">
                     <label for="direccionInput" class="form-label">Dirección del cliente</label>
                     <input type="text" class="form-control" id="direccionInput">
+                    <div  id="errorName" class="invalid-feedback">La dirección ingresada no es válida. Debe empezar con el tipo de vía seguido del nombre (por ejemplo, 'Calle de la Paz'), y debe terminar con un número de calle o 's/n' (sin número). Por favor, no incluya comas, puntos o cualquier otro carácter especial [por ejemplo: "Calle del Sol 12"]</div>
                 </div>
 
                 <div class="col">
                     <label for="precioMaxInput" class="form-label">Inversión máxima</label>
                     <input type="text" class="form-control" id="precioMaxInput">
+                    <div  id="errorName" class="invalid-feedback">Rellena bien los campos con un mínimo de 3 caracteres. Asegúrate de ingresar números en el campo "Inversion máxima"</div>
                 </div>
 
             </div>
@@ -45,29 +48,35 @@
                 <div class="col">
                     <label for="volumenEnfriador1" class="form-label">Volumen del enfriador 1</label>
                     <input type="text" class="form-control" id="volumenEnfriador1">
+                    <div  id="errorName" class="invalid-feedback">Rellena bien los campos con un mínimo de 3 caracteres. Asegúrate de ingresar números en los campos de: "Volumen del enfriador"</div>
                 </div>
 
                 <div class="col">
                     <label for="frigoriasEnfriador1" class="form-label">Frigorias del enfriador 1</label>
                     <input type="text" class="form-control" id="frigoriasEnfriador1">
+                    <div  id="errorName" class="invalid-feedback">Rellena bien los campos con un mínimo de 3 caracteres. Asegúrate de ingresar letras en los campos de: "Frigorias del enfriador"</div>
                 </div>
                 <div class="col">
                     <label for="precioEnfriador1" class="form-label">Precio del enfriador 1</label>
                     <input type="text" class="form-control" id="precioEnfriador1">
+                    <div  id="errorName" class="invalid-feedback">Rellena bien los campos con un mínimo de 3 caracteres. Asegúrate de ingresar letras en los campos de: "Precio del enfriador" Además, la suma de los precios de los enfriadores no puede ser superior a la: "inversion máxima" del primer formulario.</div>
                 </div>
 
                 <div class="col">
                     <label for="volumenEnfriador2" class="form-label">Volumen del enfriador 2</label>
                     <input type="text" class="form-control" id="volumenEnfriador2">
+                    <div  id="errorName" class="invalid-feedback">Rellena bien los campos con un mínimo de 3 caracteres. Asegúrate de ingresar números en los campos de: "Volumen del enfriador"</div>
                 </div>
 
                 <div class="col">
                     <label for="frigoriasEnfriador2" class="form-label">Frigorias del enfriador 2</label>
                     <input type="text" class="form-control" id="frigoriasEnfriador2">
+                    <div  id="errorName" class="invalid-feedback">Rellena bien los campos con un mínimo de 3 caracteres. Asegúrate de ingresar letras en los campos de: "Frigorias del enfriador"</div>
                 </div>
                 <div class="col">
                     <label for="precioEnfriador2" class="form-label">Precio del enfriador 2</label>
                     <input type="text" class="form-control" id="precioEnfriador2">
+                    <div  id="errorName" class="invalid-feedback">Rellena bien los campos con un mínimo de 3 caracteres. Asegúrate de ingresar letras en los campos de: "Precio del enfriador" Además, la suma de los precios de los enfriadores no puede ser superior a la: "inversion máxima" del primer formulario.</div>
                 </div>
             </div>
 
@@ -75,29 +84,35 @@
                 <div class="col">
                     <label for="volumenEnfriador3" class="form-label">Volumen del enfriador 3</label>
                     <input type="text" class="form-control" id="volumenEnfriador3">
+                    <div  id="errorName" class="invalid-feedback">Rellena bien los campos con un mínimo de 3 caracteres. Asegúrate de ingresar números en los campos de: "Volumen del enfriador"</div>
                 </div>
 
                 <div class="col">
                     <label for="frigoriasEnfriador3" class="form-label">Frigorias del enfriador 3</label>
                     <input type="text" class="form-control" id="frigoriasEnfriador3">
+                    <div  id="errorName" class="invalid-feedback">Rellena bien los campos con un mínimo de 3 caracteres. Asegúrate de ingresar letras en los campos de: "Frigorias del enfriador"</div>
                 </div>
                 <div class="col">
                     <label for="precioEnfriador3" class="form-label">Precio del enfriador 3</label>
                     <input type="text" class="form-control" id="precioEnfriador3">
+                    <div  id="errorName" class="invalid-feedback">Rellena bien los campos con un mínimo de 3 caracteres. Asegúrate de ingresar letras en los campos de: "Precio del enfriador" Además, la suma de los precios de los enfriadores no puede ser superior a la: "inversion máxima" del primer formulario.</div>
                 </div>
 
                 <div class="col">
                     <label for="volumenEnfriador4" class="form-label">Volumen del enfriador 4</label>
                     <input type="text" class="form-control" id="volumenEnfriador4">
+                    <div  id="errorName" class="invalid-feedback">Rellena bien los campos con un mínimo de 3 caracteres. Asegúrate de ingresar números en los campos de: "Volumen del enfriador"</div>
                 </div>
 
                 <div class="col">
                     <label for="frigoriasEnfriador4" class="form-label">Frigorias del enfriador 4</label>
                     <input type="text" class="form-control" id="frigoriasEnfriador4">
+                    <div  id="errorName" class="invalid-feedback">Rellena bien los campos con un mínimo de 3 caracteres. Asegúrate de ingresar letras en los campos de: "Frigorias del enfriador"</div>
                 </div>
                 <div class="col">
                     <label for="precioEnfriador4" class="form-label">Precio del enfriador 4</label>
                     <input type="text" class="form-control" id="precioEnfriador4">
+                    <div  id="errorName" class="invalid-feedback">Rellena bien los campos con un mínimo de 3 caracteres. Asegúrate de ingresar letras en los campos de: "Precio del enfriador" Además, la suma de los precios de los enfriadores no puede ser superior a la: "inversion máxima" del primer formulario.</div>
                 </div>
             </div>
 
