mejorando una expresion regular

--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <div id="allbody" class="container">
-        <h1>Ejercicio Vehículos</h1>
+        <h1>Examen Juan Carlos Amela</h1>
         <div id="create-camara-form">
 
             <div class="row">
