--- a/views/index.html
+++ b/views/index.html
@@ -22,7 +22,7 @@
                 <div class="col">
                     <label for="direccionInput" class="form-label">Dirección del cliente</label>
                     <input type="text" class="form-control" id="direccionInput">
-                    <div  id="errorName" class="invalid-feedback">La dirección ingresada no es válida. Debe empezar con el tipo de vía seguido del nombre (por ejemplo, 'Calle de la Paz'), y debe terminar con un número de calle o 's/n' (sin número). Por favor, no incluya comas, puntos o cualquier otro carácter especial [por ejemplo: "Calle del Sol 12"]</div>
+                    <div  id="errorName" class="invalid-feedback">La dirección ingresada no es válida. solo puede contener letras sin acentuar (mayúsculas y minúsculas), números y espacios en blanco</div>
                 </div>
 
                 <div class="col">
