--- a/views/index.html
+++ b/views/index.html
@@ -118,7 +118,7 @@
 
             <div class="row mt-3">
                 <div class="col">
-                    <button type="submit" class="btn btn-primary mb-2" onclick="submitequipoForm()">Añadir Enfriadores al presupuesto</button>
+                    <button type="submit" class="btn btn-primary mb-2" onclick="submitEquipoForm()">Añadir Enfriadores al presupuesto</button>
                 </div>
             </div>
         </div>
